# ultrakill_intro_screen

./: .gitignore  CMakeLists.txt  LICENSE  README.md  inputMessages.json
cmake/: mingw-toolchain.cmake
include/: drawingText.h  manageAudio.h
include/drawing/: text.h
include/jsonParser/: parser.h
include/movement/: keysMovement.h
include/terminalEngine/: v1View.h
include/textScheduler/: scheduler.h
src/: .clang-format  CMakeLists.txt  drawingText.c  main.c  manageAudio.c
src/audio/: manageAudio.c
src/drawing/: text.c  textureEffects.c
src/movement/: keysMovement.c
src/parserJson/: cJSON.c  parser.c
src/render/: text.c
src/terminalEngine/: v1View.c
src/textScheduler/: scheduler.c
tests/: testParser.c  testTerminalEngine.c
